<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>de.cuioss</groupId>
        <artifactId>cui-java-parent</artifactId>
        <version>1.2.5</version>
        <relativePath />
    </parent>
    <groupId>de.cuioss.rewrite</groupId>
    <artifactId>cui-open-rewrite</artifactId>
    <version>1.1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>cui open-rewrite</name>
    <description>OpenRewrite recipes for cuioss projects.
    </description>
    <url>https://github.com/cuioss/cui-open-rewrite/</url>
    <scm>
        <url>https://github.com/cuioss/cui-open-rewrite/</url>
        <connection>
            scm:git:https://github.com/cuioss/cui-open-rewrite/.git
        </connection>
        <developerConnection>
            scm:git:https://github.com/cuioss/cui-open-rewrite/
        </developerConnection>
        <tag>HEAD</tag>
    </scm>
    <issueManagement>
        <url>https://github.com/cuioss/cui-open-rewrite/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>
    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <maven.jar.plugin.automatic.module.name>de.cuioss.rewrite</maven.jar.plugin.automatic.module.name>
        <openrewrite.version>8.61.2</openrewrite.version>
        <openrewrite.maven.version>6.17.0</openrewrite.maven.version>
    </properties>
    <dependencies>
        <!-- OpenRewrite Core -->
        <dependency>
            <groupId>org.openrewrite</groupId>
            <artifactId>rewrite-java</artifactId>
            <version>${openrewrite.version}</version>
        </dependency>

        <!-- Runtime dependency for Java 11+ support -->
        <dependency>
            <groupId>org.openrewrite</groupId>
            <artifactId>rewrite-java-11</artifactId>
            <version>${openrewrite.version}</version>
            <scope>runtime</scope>
        </dependency>

        <!-- JSpecify for nullability annotations -->
        <dependency>
            <groupId>org.jspecify</groupId>
            <artifactId>jspecify</artifactId>
        </dependency>

        <!-- CUI Java Tools for CuiLogger -->
        <dependency>
            <groupId>de.cuioss</groupId>
            <artifactId>cui-java-tools</artifactId>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>org.openrewrite</groupId>
            <artifactId>rewrite-test</artifactId>
            <version>${openrewrite.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- Unit testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
        </dependency>

        <!-- Lombok for testing recipe with Lombok annotations -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- CUI Test Juli Logger for testing log output -->
        <dependency>
            <groupId>de.cuioss.test</groupId>
            <artifactId>cui-test-juli-logger</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
